eladmin/eladmin-k8s-boot-starter/src/main/resources/templates/v20250113/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ${appName}
  name: ${appName}
