eladmin/eladmin-k8s-boot-starter/src/main/resources/templates/v20250113/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: ${appName}
    env: ${envCode}
    platform: kenaito-devops
    resGroup: ${appName}-${envCode}-srv
  name: ${serviceName}
  namespace: ${appName}
spec:
  # 指定服务期望的IP地址族的列表。IP地址族可以是IPv4或IPv6
  ipFamilies:
    - IPv4
  # 指定Service的IP家族策略。它的可选值有SingleStack、PreferDualStack和RequireDualStack
  # SingleStack: 表示服务只使用单个IP家族（IPv4或IPv6）
  # PreferDualStack: 表示服务优先使用双栈（IPv4和IPv6），但在无法提供双栈时会退回到单栈
  # RequireDualStack: 表示服务需要双栈支持，如果无法提供双栈，服务将无法创建
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80 # Service端口
      protocol: TCP # 协议
      targetPort: 28001 # 容器端口
  # 通过标签关联pod
  selector:
    appName: ${appName}
    resGroup: ${appName}-${envCode}-pod
  # 指定选择后端 Pod 的方法。当 spec.sessionAffinity 设置为 ClientIP 时，来自同一个客户端的请求会被转发到同一个后端 Pod
  sessionAffinity: None
  # 服务类型
  type: ClusterIP
