eladmin/eladmin-k8s-boot-starter/src/main/resources/templates/v20250113/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # 该注解允许你设置应用的名称，这个名称可以用于日志记录或者其他一些nginx的配置
    nginx.ingress.kubernetes.io/app.name: ${appName}
  name: ${appName}-${envCode}-ing
  namespace: ${appName}
spec:
  # 参考文档 https://blog.csdn.net/ysf15609260848/article/details/125898494
  rules:
    - host: ${hostname}
      http:
        paths:
          - backend:
              service:
                # service名称
                name: ${serviceName}
                port:
                  # service端口
                  number: 80
            path: /
            # Prefix：基于以 / 分隔的 URL 路径前缀匹配。匹配区分大小写，并且对路径中的元素逐个完成。 路径元素指的是由 / 分隔符分隔的路径中的标签列表。 如果每个 p 都是请求路径 p 的元素前缀，则请求与路径 p 匹配。
            # Exact：精确匹配 URL 路径，且区分大小写。
            # ImplementationSpecific：对于这种路径类型，匹配方法取决于 IngressClass。 具体实现可以将其作为单独的 pathType 处理或者与 Prefix 或 Exact 类型作相同处理。
            pathType: ImplementationSpecific
